# glframework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _NBody.h  _OpenVR.h  _Texture.h  _Window.h  appveyor.yml  dependencies.txt  todo.md
.github/workflows/: main.yml
demos/galaxyInHand/: CMakeLists.txt  galaxyInHand.cpp
demos/galaxyInHand/shaders/: PositionCalculationCompute0.cpp  RendererFragment0.cpp  RendererVertex0.cpp  ShaderLists.txt
demos/multiSim/: CMakeLists.txt  multiSim.cpp
demos/multiSim/shaders/: VelocityCalculationCompute0.cpp
demos/multiThread/: CMakeLists.txt  multiThread.cpp
demos/multiView/: CMakeLists.txt  multiView.cpp
demos/multiView/shaders/: VelocityCalculationCompute0.cpp
demos/renderTexture/: CMakeLists.txt  renderTexture.cpp
demos/renderTexture/shaders/: ShaderLists.txt  TextureRendererVertex0.cpp
demos/renderToTexture/: CMakeLists.txt  renderToTexture.cpp
demos/renderToTexture/shaders/: TextureRendererFragment0.cpp
dependencies/cuda-cmake-github-actions/scripts/actions/: install_cuda_windows.ps1
include/: _Fractal.h  _ImGui.h  _NBody.h  _OpenGL.h  _OpenXR.h  _RenderToTexture.h  _Texture.h  _TextureRenderer.h  _Window.h
include/CUDA/: _CUDA.h  _CUDA_Fractal.h  _CUDA_NBody_Common.h  _CUDA_NBody_Device.cuh  _CUDA_Texture.h  helper_math.h
include/xr/: _OpenXR.h  _XrGui.h  _XrOS.h  _XrVolume.h
src/: _CUDA_Fractal.cu  _CUDA_NBody_Device.cu  _Fractal.cu  _ImGui.cpp  _NBody.cu  _OpenGL.cpp  _OpenXR.cpp  _Window.cpp  _XrOS.cpp
tests/: CMakeLists.txt  tests.cpp  tests.cu
tests/shaders/: RendererFragment0.cpp  RendererVertex0.cpp
